14/12/2023 SelectForm Select current Scanner;
           Changed Extended to Single (for platform compatibility and for my actual state);
           32bit Server Result for internalTake;
           Test use ttmNative mode (MUST be used in Main app)
19/12/2023 32bit Server switched to ttmNative TransferMode; Test added TwainAcquireNative or Acquire with TBitmap
20/12/2023 Twain switched to ttmNative; TDigIt_Taker use Variant+TDigIt_TakerResultType;
           32bit Server use new TwainAcquireNative;

06/06/2024 Added Use of MaxM_Commons Package and MM_SyncIPC in it; 
           Changed Use of Package ExpandPanels with BCExpandPanelses
07/06/2024 Added Button TimerTake to MainForm

12/06/2024 First Tests to Switch Bridge to Interfaces
26/06/2024 Switch to Interface use in Bridge, Taker, etc;
           Temporarily removed Taker Twain until it is converted to interfaces;
           First test of Load Plugins from Library;
27/06/2024 Changed IDigIt_Params.Summary params list; Added Flags in Plugin/Taker; Added function AllocPChar
02/07/2024 Switched Taker Twain to interfaces; Added OnSet to IDigIt_Params interface
03/07/2024 Porting of Twain Taker Completed; Taker_SelectWithParams calls IDigitParams.OnSet;
05/07/2024 In Interfaces Added Kind of Taker, Changed Preview/Take Params; 
	   Updated Takers;
	   Bridge Implementation GetTaker return PTakerInfo;
	   Updated MainForm according to this changes;
08/07/2024 Main Form Buttons use ImageList and some adjustments
09/07/2024 Rotate/Flip Preprocessing filters;
	   Load/SavePageSettings (Rotate and Flip); 
	   Twain 32bit Comm executable debug name -dbg
10/07/2024 Destination as ToolButton with a Settings Form; 
	   Changed XML Structure; 
           Twain Taker use twain_take.bmp as temp file, if start with null Product call GetFromUser;
	   Cleanup of old commented code
11/07/2024 Only one method Take in IDigIt_Taker with DigIt_Taker_TakeAction param; 
           Changed some constant name; More comments